wcserver/cpp/include/wcserver.h

BOOL  APIENTRY GetComputerConfig(TComputerConfig &cc);
///////////////////////////////////////////////////////////////////////////
//! These functions are used to arbitrate access to CD-ROM changers and such
//! when files are marked for copy-before-download.  After submitting the
//! pathnames of the files to be retrieved, with a unique Id for each file,
//! GetNextCopyRequest should be called in a loop to determine which file to
//! copy next.  If a positive number is returned, it is the id of a request
//! to copy.  If 0 is returned, there are no more requests.  If -1 is
//! returned there are still requests pending and the application should
//! delay for a short time and keep trying.  When a file has finished
//! copying, RemoveCopyRequest must be called so that other clients may
//! access files they have queued.
///////////////////////////////////////////////////////////////////////////

BOOL  APIENTRY SubmitCopyRequest(DWORD id, const char *fn);
DWORD APIENTRY GetNextCopyRequest();
BOOL  APIENTRY RemoveCopyRequest(DWORD id);
///////////////////////////////////////////////////////////////////////////
//! Return connection info for the given connectionid or the next higher
//! connectionid. Returns FALSE when there is no higher connectionid.
///////////////////////////////////////////////////////////////////////////

BOOL  APIENTRY GetConnectionInfo(DWORD connectionid, TConnectionInfo &ci);
///////////////////////////////////////////////////////////////////////////
//! Modify the amount of time the current user has remaining for the day.
//! Negative values are ok.
///////////////////////////////////////////////////////////////////////////

BOOL  APIENTRY AdjustUserTime(long minutes);
//$SDK(1)

//////////////// NEW SERVER FUNCTION BUILD 446 //////////////

// HLS 02/26/99 10:27 pm
BOOL  APIENTRY GetWildcatServerInfo(TWildcatServerInfo &si);
//////////////// NEW SERVER FUNCTION BUILD 447B2 //////////////

// HLS 06/29/99 11:53 pm
BOOL  APIENTRY GetUserByKeyIndex(DWORD keynum, DWORD idx, TUser &u, DWORD &tid);
BOOL  APIENTRY CheckClientAddress(DWORD clientip, const char *szIPFile);
BOOL  APIENTRY CheckMailIntegrity(DWORD conf, DWORD level);
// HLS 447B7 08/25/99 08:35 pm
BOOL  APIENTRY UpdateMessageFlags(TMsgHeader &msg);
// HLS 448B 12/21/99 08:40 pm
BOOL  APIENTRY DeleteMessageAttachment(TMsgHeader &msg);
/////////////////// HELPER FUNCTIONS (NON RPC) /////////////////
// HLS 02/18/99 10:00 pm

///////////////////////////////////////////////////////////////////////////
//! Given computer name, return the server options for the particular machine.
//! If computer name is "" or null, it will turn the default settings for the
//! system wide services.  If you want the current computer server settings,
//! use GetComputerConfig(cc) instead.
///////////////////////////////////////////////////////////////////////////

BOOL  APIENTRY GetComputerConfigEx(char *szComputerName, TComputerConfig &cc);
///////////////////////////////////////////////////////////////////////////
//! User Extended Database/Profile Helper Functions
///////////////////////////////////////////////////////////////////////////

BOOL APIENTRY ProfileDateToFileDate(const char *szInt64, FILETIME &ft);
BOOL APIENTRY GetUserVariableDate(DWORD id,const char *section,const char *key,FILETIME &ft);
BOOL APIENTRY GetUserProfileDate(DWORD id,const char *key,FILETIME &ft);
BOOL APIENTRY GetUserProfileDateStr(DWORD id,const char *key,const char *format,char *dest,DWORD destsize);
BOOL APIENTRY GetUserProfileTimeStr(DWORD id,const char *key,const char *format,char *dest,DWORD destsize);
BOOL APIENTRY SetUserVariableDate(DWORD id,const char *section,const char *key,FILETIME &ft);
BOOL APIENTRY SetUserProfileDate(DWORD id, const char *key, FILETIME &ft);
BOOL APIENTRY SetUserProfileSystemTime(DWORD id,const char *key,SYSTEMTIME &st);
// HLS 447B6
BOOL APIENTRY GetUserProfileBool(DWORD id, const char *key, BOOL &flag);
BOOL APIENTRY SetUserProfileBool(DWORD id, const char *key, BOOL flag);
// HLS 447.5 10/28/99 04:11 pm
BOOL APIENTRY wcCopyFileToTemp(DWORD area, const char *fn);
// HLS 448.5 04/01/00 04:37 pm
BOOL APIENTRY UpdateUserEx(TUser &user, const char *oldpwd, const char *newpwd);
//!
//! 450.3 07/30/02
//! Wildcat! SASL functions for authentication services
//!

BOOL APIENTRY WcSASLGetMethodName(char *szMethod,
                                  const DWORD dwSize,
                                  const DWORD dwIndex);
//!
//! Check the SASL Login credentials (user is logged in)
//!
DWORD APIENTRY WcSASLAuthenticateUser(TWildcatSASLContext *ctx,
                                      const char *szFromClient,
                                      char *szResponse,
                                      const DWORD dwResponseSize,
                                      TUser &u);
//!
//! Check the SASL Login credentials (user is logged in)
//!
DWORD APIENTRY WcSASLAuthenticateUserEx(TWildcatSASLContext *ctx,
                                        const char *szFromClient,
                                        char *szResponse,
                                        const DWORD dwResponseSize,
                                        const DWORD dwCallType,
                                        const char *szSpeed,
                                        TUser &u);
//!
//! 450.3 07/30/02
//! Get the wildcat server process running times
//!

BOOL APIENTRY WcGetProcessTimes(TWildcatProcessTimes &pt);
//! 450.7
//! Set the context peer address
//!

BOOL APIENTRY SetContextPeerAddress(const DWORD address);
//! 450.8 06/18/03
//! Wildcat! INI File Functions. These Wildcat! INI file
//! functions work similar to the Win32 equivalent private
//! profile functions. The key difference is that Win32
//! INI files are local to the machine, where these Wildcat!
//! INI functions use server side files using the Wildcat!
//! file naming syntax, i.e., "wc:\data\productxyz.ini"
//!

BOOL APIENTRY WcGetPrivateProfileString
                  (const char *sect,
                   const char *key,
                   const char *defvalue,
                   char *dest,
                   DWORD *destsize,
                   const char *inifile);
BOOL APIENTRY WcWritePrivateProfileString
                  (const char *sect,
                   const char *key,
                   const char *value,
                   const char *inifile);
BOOL APIENTRY WcGetPrivateProfileSection
                  (const char *sect,
                   char *dest,
                   DWORD *destsize,
                   const char *inifile);
//! 451.2 07/18/04
//! Extended WcCreateFileEx() function returns TwcOpenFileInfo
//! structure. Useful when you need to open a file and obtain
//! file information in one single RPC call.

WCHANDLE APIENTRY WcCreateFileEx
                  (const char *fn,
                   DWORD access,
                   DWORD sharemode,
                   DWORD create,
                   TwcOpenFileInfo *pwcofi);
//! 451.5 10/04/05
//! GetConnectionInfoFromChallenge() function returns TConnectionInfo
//! for a given challenge.

BOOL APIENTRY GetConnectionInfoFromChallenge(const char *challenge,
                                             TConnectionInfo &ci);
//! 451.6
//! DeleteUserVariable - delete extended user section or key

BOOL  APIENTRY DeleteUserVariable(DWORD id,
                                  const char *section,
                                  const char *key);
//! 451.9
//! WcCheckUserName - Return FALSE if user name has invalid characters

BOOL APIENTRY WcCheckUserName(const char *szName);
//! 451.9
//! WcSetMessageAttachments - helps prepare attachment field

BOOL APIENTRY WcSetMessageAttachment(TMsgHeader &msg,
                                     const char *szFileName,
                                     const BOOL bCopyTo);
//! WcLocalCopyToServer - copy local side file to server side wc:\ file

BOOL APIENTRY WcLocalCopyToServer(const char *szLocal,
                                  const char *szServer,
                                  const int msSlice);