wcserver/vb/modules/wcserver.bas


'//! These functions are used to arbitrate access to CD-ROM changers and such
'//! when files are marked for copy-before-download.  After submitting the
'//! pathnames of the files to be retrieved, with a unique Id for each file,
'//! GetNextCopyRequest should be called in a loop to determine which file to
'//! copy next.  If a positive number is returned, it is the id of a request
'//! to copy.  If 0 is returned, there are no more requests.  If -1 is
'//! returned there are still requests pending and the application should
'//! delay for a short time and keep trying.  When a file has finished
'//! copying, RemoveCopyRequest must be called so that other clients may
'//! access files they have queued.

Declare Function SubmitCopyRequest Lib "wcsrv2.dll" (ByVal id As Long, ByVal fn As String) As Boolean
Declare Function GetNextCopyRequest Lib "wcsrv2.dll" () As Long
Declare Function RemoveCopyRequest Lib "wcsrv2.dll" (ByVal id As Long) As Boolean

'//! Return connection info for the given connectionid or the next higher
'//! connectionid. Returns FALSE when there is no higher connectionid.

Declare Function GetConnectionInfo Lib "wcvb.dll" Alias "vbGetConnectionInfo" (ByVal connectionid As Long, ci As TConnectionInfo) As Boolean

'//! Modify the amount of time the current user has remaining for the day.
'//! Negative values are ok.

Declare Function AdjustUserTime Lib "wcsrv2.dll" (ByVal minutes As Long) As Boolean

Declare Function GetWildcatServerInfo Lib "wcsrv2.dll" (si As TWildcatServerInfo) As Boolean

Declare Function GetUserByKeyIndex Lib "wcvb.dll" Alias "vbGetUserByKeyIndex" (ByVal keynum As Long, ByVal idx As Long, u As TUser, tid As Long) As Boolean
Declare Function CheckClientAddress Lib "wcsrv2.dll" (ByVal clientip As Long, ByVal szIPFile As String) As Boolean
Declare Function CheckMailIntegrity Lib "wcsrv2.dll" (ByVal conf As Long, ByVal level As Long) As Boolean

Declare Function UpdateMessageFlags Lib "wcvb.dll" Alias "vbUpdateMessageFlags" (msg As TMsgHeader) As Boolean

Declare Function DeleteMessageAttachment Lib "wcvb.dll" Alias "vbDeleteMessageAttachment" (msg As TMsgHeader) As Boolean

'//! Given computer name, return the server options for the particular machine.
'//! If computer name is "" or null, it will turn the default settings for the
'//! system wide services.  If you want the current computer server settings,
'//! use GetComputerConfig(cc) instead.

Declare Function GetComputerConfigEx Lib "wcvb.dll" Alias "vbGetComputerConfigEx" (ByVal szComputerName As String, cc As TComputerConfig) As Boolean

'//! User Extended Database/Profile Helper Functions

Declare Function ProfileDateToFileDate Lib "wcsrv2.dll" (ByVal szInt64 As String, ft As FILETIME) As Boolean
Declare Function GetUserVariableDate Lib "wcsrv2.dll" (ByVal id As Long, ByVal section As String, ByVal key As String, ft As FILETIME) As Boolean
Declare Function GetUserProfileDate Lib "wcsrv2.dll" (ByVal id As Long, ByVal key As String, ft As FILETIME) As Boolean
Declare Function GetUserProfileDateStr Lib "wcvb.dll" Alias "vbGetUserProfileDateStr" (ByVal id as Long, ByVal key as string, ByVal format as string) As String
Declare Function GetUserProfileTimeStr Lib "wcvb.dll" Alias "vbGetUserProfileDateStr" (ByVal id as Long, ByVal key as string, ByVal format as string) As String
Declare Function SetUserVariableDate Lib "wcsrv2.dll" (ByVal id As Long, ByVal section As String, ByVal key As String, ft As FILETIME) As Boolean
Declare Function SetUserProfileDate Lib "wcsrv2.dll" (ByVal id As Long, ByVal key As String, ft As FILETIME) As Boolean
Declare Function SetUserProfileSystemTime Lib "wcsrv2.dll" (ByVal id As Long, ByVal key As String, st As SYSTEMTIME) As Boolean

Declare Function GetUserProfileBool Lib "wcsrv2.dll" (ByVal id As Long, ByVal key As String, flag As Long) As Boolean
Declare Function SetUserProfileBool Lib "wcsrv2.dll" (ByVal id As Long, ByVal key As String, ByVal flag As Long) As Boolean

Declare Function wcCopyFileToTemp Lib "wcsrv2.dll" (ByVal area As Long, ByVal fn As String) As Boolean

Declare Function UpdateUserEx Lib "wcvb.dll" Alias "vbUpdateUserEx" (user As TUser, ByVal oldpwd As String, ByVal newpwd As String) As Boolean

'//!
'//! 450.3 07/30/02
'//! Wildcat! SASL functions for authentication services
'//!

Declare Function WcSASLGetMethodName Lib "wcsrv2.dll" (ByVal szMethod As String, ByVal dwSize As Long, ByVal dwIndex As Long) As Boolean

Declare Function WcSASLAuthenticateUser Lib "wcvb.dll" Alias "vbWcSASLAuthenticateUser" (ctx As TWildcatSASLContext, ByVal szFromClient As String, ByVal szResponse As String, ByVal dwResponseSize As Long, u As TUser) As Long

Declare Function WcSASLAuthenticateUserEx Lib "wcvb.dll" Alias "vbWcSASLAuthenticateUserEx" (ctx As TWildcatSASLContext, ByVal szFromClient As String, ByVal szResponse As String, ByVal dwResponseSize As Long, ByVal dwCallType As Long, ByVal szSpeed As String, u As TUser) As Long

'//!
'//! 450.3 07/30/02
'//! Get the wildcat server process running times
'//!

Declare Function WcGetProcessTimes Lib "wcsrv2.dll" (pt As TWildcatProcessTimes) As Boolean

'//! 450.7
'//! Set the context peer address
'//!

Declare Function SetContextPeerAddress Lib "wcsrv2.dll" (ByVal address As Long) As Boolean

'//! 450.8 06/18/03
'//! Wildcat! INI File Functions. These Wildcat! INI file
'//! functions work similar to the Win32 equivalent private
'//! profile functions. The key difference is that Win32
'//! INI files are local to the machine, where these Wildcat!
'//! INI functions use server side files using the Wildcat!
'//! file naming syntax, i.e., "wc:\data\productxyz.ini"
'//!

Declare Function WcGetPrivateProfileString Lib "wcvb.dll" Alias "vbWcGetPrivateProfileString" (byval section As String, byval key As String, byval def As String, byval ini As String) As String

Declare Function WcWritePrivateProfileString Lib "wcsrv2.dll" (ByVal sect As String, ByVal key As String, ByVal value As String, ByVal inifile As String) As Boolean

Declare Function WcGetPrivateProfileSection Lib "wcvb.dll" Alias "vbWcGetPrivateProfileSection" (byval section As String, byval ini As String) As String

'//! 451.2 07/18/04
'//! Extended WcCreateFileEx() function returns TwcOpenFileInfo
'//! structure. Useful when you need to open a file and obtain
'//! file information in one single RPC call.

Declare Function WcCreateFileEx Lib "wcsrv2.dll" (ByVal fn As String, ByVal access As Long, ByVal sharemode As Long, ByVal create As Long, pwcofi As TwcOpenFileInfo) As Long

'//! 451.5 10/04/05
'//! GetConnectionInfoFromChallenge() function returns TConnectionInfo
'//! for a given challenge.

Declare Function GetConnectionInfoFromChallenge Lib "wcvb.dll" Alias "vbGetConnectionInfoFromChallenge" (ByVal challenge As String, ci As TConnectionInfo) As Boolean

'//! 451.6
'//! DeleteUserVariable - delete extended user section or key

Declare Function DeleteUserVariable Lib "wcsrv2.dll" (ByVal id As Long, ByVal section As String, ByVal key As String) As Boolean

'//! 451.9
'//! WcCheckUserName - Return FALSE if user name has invalid characters

Declare Function WcCheckUserName Lib "wcsrv2.dll" (ByVal szName As String) As Boolean

'//! 451.9
'//! WcSetMessageAttachments - helps prepare attachment field

Declare Function WcSetMessageAttachment Lib "wcvb.dll" Alias "vbWcSetMessageAttachment" (msg As TMsgHeader, ByVal szFileName As String, ByVal bCopyTo As Long) As Boolean

'//! WcLocalCopyToServer - copy local side file to server side wc:\ file

Declare Function WcLocalCopyToServer Lib "wcsrv2.dll" (ByVal szLocal As String, ByVal szServer As String, ByVal msSlice As Long) As Boolean

